--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,13 @@
     <string name="title_business_travel_reimb_fee_traffic_in_city">市内交通补助</string>
     <string name="title_business_travel_reimb_fee_other">其他费用</string>
 
+    <string name="fee_item_person_count">人数:&#160;&#160;&#160;&#160;</string>
+    <string name="fee_item_day_count">天数:&#160;&#160;&#160;&#160;</string>
+    <string name="fee_item_fee_amount">金额:&#160;&#160;&#160;&#160;</string>
+    <string name="fee_item_fee_unit">单价:&#160;&#160;&#160;&#160;</string>
+    <string name="fee_item_fee_name">名称:&#160;&#160;&#160;&#160;</string>
+
+    <string name="serial_number_txt">流水号:&#160;&#160;%1$s</string>
 
     <string name="title_public_service_apply_project">所属项目:</string>
     <string name="title_public_service_apply_depart">接待部门:</string>
